First pass changing to use 'var'
* Change local variables to use 'var' to tidy things up and make
  local variable declarations less noisy and redundant
* Remove (some) final modifiers from local variable declarations.
  There are still a lot more on variables, parameters, etc. that
  can be cleaned up as they are noisy and (except for fields) don't
  really add that much value. And yes, I am well aware that Effective
  Java says to use final everywhere, and I disagree for the reasons
  that it makes the code less readable and very noisy, without adding
  much (if any) value in modern JVMs.

Part of #44